[gd_scene load_steps=32 format=3 uid="uid://c3ffql15mo0aj"]

[ext_resource type="Script" path="res://controllers/scripts/fps_controller.gd" id="1_pgc1p"]
[ext_resource type="Material" uid="uid://b4gwd5h7ixvct" path="res://materials/player.tres" id="2_gldw4"]
[ext_resource type="Script" path="res://controllers/scripts/reticle.gd" id="3_po3l3"]
[ext_resource type="Theme" uid="uid://do0prmldw4jig" path="res://ui/themes/debug.tres" id="4_brqky"]
[ext_resource type="PackedScene" uid="uid://c8k57m05cbv8c" path="res://meshes/weapons/handpainted_sword/scene.gltf" id="4_uihrl"]
[ext_resource type="Script" path="res://scripts/debug.gd" id="5_3pdut"]
[ext_resource type="Resource" uid="uid://buc3bk15xkvgv" path="res://meshes/weapons/crowbar/crowbar_weapon.tres" id="5_a2tu4"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="6_6l8nd"]
[ext_resource type="Script" path="res://scripts/ChatPanel.gd" id="6_2673x"]
[ext_resource type="Script" path="res://controllers/IdlePlayerState.gd" id="7_pvywl"]
[ext_resource type="Script" path="res://controllers/WalkingPlayerState.gd" id="8_gwpxq"]
[ext_resource type="Script" path="res://controllers/SprintingPlayerState.gd" id="9_l677m"]
[ext_resource type="Script" path="res://controllers/CrouchingPlayerState.gd" id="10_mg5sy"]
[ext_resource type="Script" path="res://controllers/SlidingPlayerState.gd" id="11_vfhu5"]
[ext_resource type="Script" path="res://controllers/JumpPlayerState.gd" id="12_eo414"]
[ext_resource type="Script" path="res://controllers/FallingPlayerState.gd" id="14_r48i7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u6tj1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6tv51"]
material = ExtResource("2_gldw4")

[sub_resource type="BoxShape3D" id="BoxShape3D_msu7j"]
size = Vector3(1.45811, 0.851776, 0.652069)

[sub_resource type="Animation" id="Animation_477qq"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5wvx5"]
resource_name = "Idle"

[sub_resource type="Animation" id="Animation_cbldl"]
resource_name = "JumpEnd"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0, 1.45, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.085, 0.4)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.085, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.00349066, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_65lvq"]
resource_name = "JumpStart"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.015, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.6)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.45, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_ir2em"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.015, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CameraController/Camera3D:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.065, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/Camera3D:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.066, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CameraController/Camera3D:position:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CameraController:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CameraController/Camera3D/WeaponRig/Sword:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.065, -1.19, -0.47)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CameraController/Camera3D/WeaponRig/Sword:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.383972, 1.01578, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CameraController/Camera3D/WeaponRig/Sword/SwordHitbox/CollisionShape3D:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.065, -1.19, -0.47)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("CameraController/Camera3D/WeaponRig/Sword/SwordHitbox/CollisionShape3D:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.383972, 1.01578, 0)]
}

[sub_resource type="Animation" id="Animation_e0okg"]
resource_name = "Sliding"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CrouchShapeCast:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerStateMachine/SlidingPlayerState:speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 4.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/Camera3D:fov")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3, 4.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [75.0, 84.0, 75.0]
}

[sub_resource type="Animation" id="Animation_d6yhu"]
resource_name = "Sprinting"
length = 1.2
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1, 1),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 0.065, 0, 0, 0, 0, 0.075, 0, 0, 0, 0, -0.065, 0, 0, 0, 0, -0.075, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1, 1),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 0.066, 0, 0, 0, 0, -0.036, 0, 0, 0, 0, 0.066, 0, 0, 0, 0, -0.036, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(1, 1, 1, 1, 1, 1),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}

[sub_resource type="Animation" id="Animation_rh4bd"]
resource_name = "Walking"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.015, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -0.015, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.015, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0, 1.55, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1.55, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="Animation" id="Animation_o2xk0"]
resource_name = "sword"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D/WeaponRig/Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.065, -1.19, -0.47), Vector3(0.875, -1.04, -0.47)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D/WeaponRig/Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.383972, 1.01578, 0), Vector3(-0.513127, 1.52367, -0.760964)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D/WeaponRig/Sword/SwordHitbox/CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.065, -1.19, -0.47)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController/Camera3D/WeaponRig/Sword/SwordHitbox/CollisionShape3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.383972, 1.01578, 0)]
}

[sub_resource type="Animation" id="Animation_egq1k"]
resource_name = "sword_idle"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_87ndl"]
_data = {
"Crouch": SubResource("Animation_477qq"),
"Idle": SubResource("Animation_5wvx5"),
"JumpEnd": SubResource("Animation_cbldl"),
"JumpStart": SubResource("Animation_65lvq"),
"RESET": SubResource("Animation_ir2em"),
"Sliding": SubResource("Animation_e0okg"),
"Sprinting": SubResource("Animation_d6yhu"),
"Walking": SubResource("Animation_rh4bd"),
"sword": SubResource("Animation_o2xk0"),
"sword_idle": SubResource("Animation_egq1k")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_y5xmi"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER", "ANIMATIONPLAYER", "CROUCH_SHAPECAST")]
script = ExtResource("1_pgc1p")
MOUSE_SENSITIVITY = 0.25
CAMERA_CONTROLLER = NodePath("CameraController/Camera3D")
ANIMATIONPLAYER = NodePath("AnimationPlayer")
CROUCH_SHAPECAST = NodePath("CrouchShapeCast")
DEFAULT_WEAPON = ExtResource("5_a2tu4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("CapsuleShape3D_u6tj1")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_6tv51")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.015, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.065, 0.066, 0)
fov = 83.775

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
update_mode = 1
enable_shadows = true

[node name="WeaponRig" type="Node3D" parent="CameraController/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.934204, -0.356738, 0, 0.356738, 0.934204, 0, 0, 0)

[node name="Sword" parent="CameraController/Camera3D/WeaponRig" instance=ExtResource("4_uihrl")]
transform = Transform3D(0.0158087, -0.00955126, 0.0236402, 0, 0.0278155, 0.0112382, -0.0254968, -0.00592203, 0.0146575, 1.065, -1.19, -0.47)

[node name="SwordHitbox" type="Area3D" parent="CameraController/Camera3D/WeaponRig/Sword"]
transform = Transform3D(-1.46832, -0.380456, 1.70894, -0.760491, 2.14759, -0.175303, -1.57699, -0.681419, -1.50665, 1.495, -1.31, -0.58)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraController/Camera3D/WeaponRig/Sword/SwordHitbox"]
transform = Transform3D(3.66694, -0.220951, 2.60775, 0, 0.643461, 1.23968, -5.91417, -0.136995, 1.61687, 1.065, -1.19, -0.47)
shape = SubResource("BoxShape3D_msu7j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_87ndl")
}
blend_times = [&"JumpStart", &"Walking", 0.5, &"JumpStart", &"JumpStart", 0.1]

[node name="CrouchShapeCast" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_y5xmi")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Reticle" type="CenterContainer" parent="UserInterface" node_paths=PackedStringArray("RETICLE_LINES", "PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -4.0
offset_right = 19.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_po3l3")
RETICLE_LINES = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]
PLAYER_CONTROLLER = NodePath("../..")

[node name="Top" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("4_brqky")
script = ExtResource("5_3pdut")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="ChatPanel" type="PanelContainer" parent="UserInterface"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -20.0
offset_right = 210.0
offset_bottom = 20.0
grow_vertical = 2
theme = ExtResource("4_brqky")
script = ExtResource("6_2673x")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/ChatPanel"]
layout_mode = 2

[node name="ChatContainer" type="VBoxContainer" parent="UserInterface/ChatPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("6_6l8nd")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_pvywl")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_gwpxq")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_l677m")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_mg5sy")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_vfhu5")
speed = 4.35

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_eo414")

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_r48i7")

[connection signal="area_entered" from="CameraController/Camera3D/WeaponRig/Sword/SwordHitbox" to="." method="_on_sword_hitbox_area_entered"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
